--- a/infra/deployment/kubernetes/helm/values/users-service/users-grpc.yaml
+++ b/infra/deployment/kubernetes/helm/values/users-service/users-grpc.yaml
@@ -1,8 +1,10 @@
-# Step 2: Users service (gRPC). Waits for registry (port from cluster.knownServices).
+# Users service (gRPC). Convention: protocol=grpc -> port 5000.
 # Config keys from apps/users-service/.env.example
 # Install: helm install users-grpc charts/microservice -f values/cluster.yaml -f values/users-service/users-grpc.yaml -n <ns>
 
 fullnameOverride: users-grpc
+
+protocol: grpc
 
 image:
   name: users-service
@@ -14,27 +16,17 @@ command: ["node", "dist/grpc.main"]
 dependencies:
   - service: registry
 
-port: 50051
-
-# Explicit non-sensitive env (from apps/users-service/.env.example)
 env:
-  - name: NODE_ENV
-    value: "production"
   - name: APP_NAME
     value: "users-service"
-  - name: LOG_PRETTY
-    value: "false"
-  - name: LOG_LEVEL
-    value: "info"
 
-# Required keys in existingSecret (ESO or manual Secret). Source: apps/users-service/.env.example
 secretKeys:
   - USERS_SERVICE_GRAPHQL_URL
   - USERS_SERVICE_GRPC_URL
   - INTERNAL_REGISTRY_SERVER_HOST
   - DB_CONNECTION_URL
 
-existingSecret: users-grpc-db-config
+existingSecret: users-grpc-service-config
 
 resources:
   requests:
@@ -54,5 +46,3 @@ autoscaling:
 
 service:
   type: ClusterIP
-  targetPort: grpc-server
-  name: grpc-server
