--- a/packages/nest-shared/package.json
+++ b/packages/nest-shared/package.json
@@ -38,6 +38,10 @@
       "types": "./dist/graphql/index.d.ts",
       "default": "./dist/graphql/index.js"
     },
+    "./health": {
+      "types": "./dist/health/index.d.ts",
+      "default": "./dist/health/index.js"
+    },
     "./grpc": {
       "types": "./dist/grpc/index.d.ts",
       "default": "./dist/grpc/index.js"
@@ -84,6 +88,7 @@
     "@apollo/server": "catalog:",
     "@nestjs/apollo": "catalog:",
     "@nestjs/graphql": "catalog:",
+    "@nestjs/terminus": "catalog:",
     "@as-integrations/express5": "catalog:",
     "@grpc/reflection": "catalog:",
     "@grpc/grpc-js": "catalog:",
