--- a/packages/nest-shared/package.json
+++ b/packages/nest-shared/package.json
@@ -76,6 +76,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@packages/grpc": "workspace:*",
     "@packages/utils": "workspace:*",
     "@packages/shared-types": "workspace:*",
     "@nestjs/axios": "catalog:",
