--- a/infra/deployment/kubernetes/helm/charts/microservice/templates/deployment.yaml
+++ b/infra/deployment/kubernetes/helm/charts/microservice/templates/deployment.yaml
@@ -31,8 +31,49 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      {{- if .Values.dependencies }}
       initContainers:
+        - name: merge-config-and-secrets
+          image: busybox:1.36
+          command:
+            - /bin/sh
+            - -c
+            - |
+              set -e
+              OUT="{{ .Values.configVolume.mountPath }}/{{ .Values.configVolume.envFilePath }}"
+              mkdir -p "$(dirname "$OUT")"
+              touch "$OUT"
+              chmod 600 "$OUT"
+              if [ -d /shared-config ]; then
+                for f in /shared-config/*; do
+                  [ -f "$f" ] && echo "$(basename "$f")=$(cat "$f")" >> "$OUT"
+                done
+              fi
+              if [ -d /service-config ]; then
+                for f in /service-config/*; do
+                  [ -f "$f" ] && echo "$(basename "$f")=$(cat "$f")" >> "$OUT"
+                done
+              fi
+              if [ -d /app-secrets ]; then
+                for f in /app-secrets/*; do
+                  [ -f "$f" ] && echo "$(basename "$f")=$(cat "$f")" >> "$OUT"
+                done
+              fi
+              echo "Merged config and secrets into $OUT"
+          volumeMounts:
+            - name: shared-config
+              mountPath: /shared-config
+              readOnly: true
+            - name: env-file
+              mountPath: "{{ .Values.configVolume.mountPath }}"
+            {{- if .Values.existingConfigMap }}
+            - name: service-config
+              mountPath: /service-config
+              readOnly: true
+            {{- end }}
+            - name: app-secrets
+              mountPath: /app-secrets
+              readOnly: true
+        {{- if .Values.dependencies }}
         - name: wait-for-dependencies
           image: busybox:1.36
           command:
@@ -50,7 +91,7 @@ spec:
               echo "{{ .service }}:{{ $depPort }} is ready"
               {{- end }}
               echo "All dependencies are ready"
-      {{- end }}
+        {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository | default .Values.imageRepository }}/{{ .Values.image.name }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
@@ -65,18 +106,15 @@ spec:
           env:
             - name: {{ .Values.portEnvKey | default (include "microservice.portEnvKey" .) }}
               value: {{ include "microservice.containerPort" . }}
+            - name: DOTENV_CONFIG_PATH
+              value: "{{ .Values.configVolume.mountPath }}/{{ .Values.configVolume.envFilePath }}"
             {{- with .Values.env }}
             {{- toYaml . | nindent 12 }}
             {{- end }}
-          envFrom:
-            - configMapRef:
-                name: global-shared-config
-            - secretRef:
-                name: {{ .Values.existingSecret | default (printf "%s-secrets" (include "microservice.fullname" .)) }}
-            {{- if .Values.existingConfigMap }}
-            - configMapRef:
-                name: {{ .Values.existingConfigMap }}
-            {{- end }}
+          volumeMounts:
+            - name: env-file
+              mountPath: "{{ .Values.configVolume.mountPath }}"
+              readOnly: true
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           {{- if eq (include "microservice.protocol" .) "http" }}
@@ -111,6 +149,28 @@ spec:
             periodSeconds: 5
             timeoutSeconds: 3
             failureThreshold: 2
+          {{- end }}
+      volumes:
+        - name: shared-config
+          configMap:
+            name: global-shared-config
+        - name: env-file
+          emptyDir: {}
+        {{- if .Values.existingConfigMap }}
+        - name: service-config
+          configMap:
+            name: {{ .Values.existingConfigMap }}
+        {{- end }}
+        - name: app-secrets
+          {{- if eq .Values.secretsVolume.type "csi" }}
+          csi:
+            driver: secrets-store.csi.k8s.io
+            readOnly: true
+            volumeAttributes:
+              secretProviderClass: {{ .Values.secretsVolume.csi.secretProviderClass | quote }}
+          {{- else }}
+          secret:
+            secretName: {{ .Values.secretsVolume.secretName | default .Values.existingSecret | default (printf "%s-secrets" (include "microservice.fullname" .)) }}
           {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
