feat(AM-43): fixed docker containers build

--- a/apps/auth-service/.env.example
+++ b/apps/auth-service/.env.example
@@ -3,6 +3,7 @@ APP_NAME=auth-service
 APP_GRAPHQL_PORT=4303
 APP_GRPC_PORT=4503
 
+# Registration URLs (used by registry for service discovery, not for binding)
 AUTH_SERVICE_GRAPHQL_URL=http://localhost:4303
 AUTH_SERVICE_GRPC_URL=0.0.0.0:4503
 
