--- a/apps/users-service/.env.example
+++ b/apps/users-service/.env.example
@@ -3,6 +3,7 @@ APP_NAME=users-service
 APP_GRAPHQL_PORT=4302
 APP_GRPC_PORT=4502
 
+# Registration URLs (used by registry for service discovery, not for binding)
 USERS_SERVICE_GRAPHQL_URL=http://localhost:4302
 USERS_SERVICE_GRPC_URL=0.0.0.0:4502
 
