--- a/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-graphql.yaml
@@ -19,16 +19,22 @@ dependencies:
   - service: auth-graphql
 
 # Gateway-specific env only if needed; common vars from global-shared-config.
-env: []
+env:
+  - name: INTERNAL_REGISTRY_SERVER_HOST
+    value: "http://registry:80"
 
 secretKeys:
-  - INTERNAL_REGISTRY_SERVER_HOST
-  - RT_SECRET
   - AT_SECRET
+  - RT_SECRET
   - COOKIES_MAX_AGE
   - CORS_ORIGINS
 
 existingSecret: api-gateway-graphql-service-config
+
+# AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
+secretsVolume:
+  csi:
+    secretProviderClass: api-gateway-service-secrets
 
 resources:
   requests:
