--- a/infra/deployment/kubernetes/helm/values/auth-service/auth-graphql.yaml
+++ b/infra/deployment/kubernetes/helm/values/auth-service/auth-graphql.yaml
@@ -21,17 +21,25 @@ dependencies:
 env:
   - name: APP_NAME
     value: "auth-service"
+  - name: AUTH_SERVICE_GRAPHQL_URL
+    value: "http://auth-graphql:80"
+  - name: AUTH_SERVICE_GRPC_URL
+    value: "auth-grpc:5000"
+  - name: INTERNAL_REGISTRY_SERVER_HOST
+    value: "http://registry:80"
 
 secretKeys:
-  - AUTH_SERVICE_GRAPHQL_URL
-  - AUTH_SERVICE_GRPC_URL
-  - INTERNAL_REGISTRY_SERVER_HOST
   - DB_CONNECTION_URL
-  - RT_SECRET
   - AT_SECRET
+  - RT_SECRET
   - COOKIES_MAX_AGE
 
 existingSecret: auth-graphql-service-config
+
+# AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
+secretsVolume:
+  csi:
+    secretProviderClass: auth-service-secrets
 
 resources:
   requests:
