--- a/infra/deployment/kubernetes/helm/values/registry-service/registry.yaml
+++ b/infra/deployment/kubernetes/helm/values/registry-service/registry.yaml
@@ -23,9 +23,14 @@ dependencies: []
 # No service-specific env; use global-shared-config for NODE_ENV, LOG_LEVEL, etc.
 env: []
 
-secretKeys: []
+secretKeys: [] # registry has no secrets
 
 existingSecret: registry-service-config
+
+# AWS CSI: SecretProviderClass name (applied when secretsVolume.type=csi via values/aws.yaml)
+secretsVolume:
+  csi:
+    secretProviderClass: registry-service-secrets
 
 resources:
   requests:
