--- a/infra/deployment/kubernetes/manifests/base/ingress.yaml
+++ b/infra/deployment/kubernetes/manifests/base/ingress.yaml
@@ -24,3 +24,10 @@ spec:
                 name: api-gateway-rest
                 port:
                   number: 80
+          - path: /health
+            pathType: Prefix
+            backend:
+              service:
+                name: api-gateway-rest
+                port:
+                  number: 80
