feat(AM-43): update versions and refactor rest prefixes

--- a/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-rest.yaml
+++ b/infra/deployment/kubernetes/helm/values/api-gateway-service/api-gateway-rest.yaml
@@ -64,6 +64,8 @@ ingress:
   hosts:
     - host: ""
       paths:
+        - path: /health
+          pathType: Prefix
         - path: /api/v1
           pathType: Prefix
 
